[package]
name = "rust-liballoc"
version = "0.0.1"
authors = ["The Rust Developers Team"]
build = "./build.rs"
description = "Liballoc wrapped into cargo package, suitable for cross-builds"
license-file = "COPYRIGHT"
repository = "https://github.com/mark-i-m/rust-liballoc"

[lib]
name = "alloc"
path = "rust/src/liballoc/lib.rs"

[dependencies]
rust-libcore = "0.0.3"
